# simpleKeySentry

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
src/: cache.rs  lib.rs  main.rs
src/cli/: mod.rs
src/collectors/: app_config.rs  cloud_cli.rs  filesystem.rs  mod.rs  shell_history.rs  ssh.rs  structured.rs
src/config/: mod.rs
src/detection/: entropy.rs  heuristics.rs  mod.rs  patterns.rs
src/models/: mod.rs
src/reporting/: html.rs  json.rs  mod.rs  terminal.rs
tests/: pattern_corpus.rs
tests/patterns/age-secret-key/: false_positives.txt  true_positives.txt
tests/patterns/anthropic-api-key/: false_positives.txt  true_positives.txt
tests/patterns/aws-access-key-id/: false_negatives.txt  false_positives.txt  true_positives.txt
tests/patterns/aws-secret-access-key/: false_positives.txt  true_positives.txt
tests/patterns/azure-client-secret/: false_positives.txt  true_positives.txt
tests/patterns/azure-sas-token/: false_positives.txt  true_positives.txt
tests/patterns/azure-storage-key/: false_positives.txt  true_positives.txt
tests/patterns/basic-auth-url/: false_positives.txt  true_positives.txt
tests/patterns/bitbucket-app-password/: false_positives.txt  true_positives.txt
tests/patterns/database-url/: false_positives.txt  true_positives.txt
tests/patterns/datadog-api-key/: false_positives.txt  true_positives.txt
tests/patterns/digitalocean-token/: false_positives.txt  true_positives.txt
tests/patterns/docker-auth-base64/: false_positives.txt  true_positives.txt
tests/patterns/export-secret-assignment/: false_positives.txt  true_positives.txt
tests/patterns/gcp-oauth-refresh-token/: false_positives.txt  true_positives.txt
tests/patterns/gcp-service-account-key/: false_positives.txt  true_positives.txt
(+52 files in other folders)
