[package]
name = "simple-key-sentry"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "A privacy-first local secrets scanner"
license = "MIT"
repository = "https://github.com/PLACEHOLDER/simple-key-sentry"

[[bin]]
name = "sks"
path = "src/main.rs"

[dependencies]
thiserror = "2"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
