[package]
name = "simple-key-sentry"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "A privacy-first local secrets scanner"
license = "MIT"
repository = "https://github.com/gdfekaris/simpleKeySentry"

[[bin]]
name = "sks"
path = "src/main.rs"

[dependencies]
thiserror = "2"
anyhow = "1"
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
regex = "1"
walkdir = "2" # recursive directory traversal for EnvFileCollector
serde_json = "1" # JSON reporter output serialization
clap = { version = "4", features = ["derive"] } # CLI argument parsing
serde_yaml_ng = "0.10" # YAML config parsing for structured file extractor
rust-ini = "0.21" # INI config parsing for structured file extractor

[profile.release]
lto = true
codegen-units = 1
strip = true
